k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-jwt-auth-service
  name: spring-boot-jwt-auth-service
#  namespace: default
spec:
  type: NodePort  # use ClusterIP as type here
  ports:
    - port: 8080
  selector:
    app: spring-boot-jwt-auth-service
