k8s/route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: session-affinity
  name: session-affinity
spec:
  rules:
    - host: biomodels.staging.ebi.ac.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: spring-boot-jwt-auth-service
              servicePort: 8080
